<resources>
    <string name="app_name">Test Your Spelling Skills</string>
    <string name="Quiz"> R U a Good Speller?</string>
    <string name="PlayerName">Player Name</string>
    <string name="No1">Question 1 of 10</string>
    <string name="Question1">What arrangement of letters is missing from the word TAM__URINE?</string>
    <string name="BU">BU</string>
    <string name="MB">MB</string>
    <string name="BO">BO</string>
    <string name="OB">OB</string>
    <string name="No2">Question 2 of 10</string>
    <string name="Question2">Which words are NOT spelled correctly?</string>
    <string name="Excede">Excede</string>
    <string name="Interceed">Interceed</string>
    <string name="Proceed">Proceed</string>
    <string name="Suceed">Suceed</string>
    <string name="No3">Question 3 of 10</string>
    <string name="Question3">Which word has the correct spelling?</string>
    <string name="Chiled">Chiled</string>
    <string name="Chileed">Chileed</string>
    <string name="Chillad">Chillad</string>
    <string name="Chilled">Chilled</string>
    <string name="No4">Question 4 of 10</string>
    <string name="Question4">"Minite" is a word that means a length of time.Spell it correctly.</string>
    <string name="No5">Question 5 of 10</string>
    <string name="Question5">What is the correct spelling of this often misspelled word?</string>
    <string name="Purfeme">Purfeme</string>
    <string name="Perrfume">Perrfume</string>
    <string name="Purfume">Purfume</string>
    <string name="Perfume">Perfume</string>
    <string name="No6">Question 6 of 10</string>
    <string name="Question6">What is the correct spelling for a word meaning to perceive sound with the ear?</string>
    <string name="Hare">Hare</string>
    <string name="Heir">Heir</string>
    <string name="Here">Here</string>
    <string name="Hear">Hear</string>
    <string name="No7">Question 7 of 10</string>
    <string name="Question7">Which is the correctly spelled word?</string>
    <string name="Naturely">Naturely</string>
    <string name="Naturally">Naturally</string>
    <string name="Ntaurally">Ntaurally</string>
    <string name="Naturelly">Naturelly</string>
    <string name="No8">Question 8 of 10</string>
    <string name="Question8">Puzzling and confusing; which is spelled correctly?</string>
    <string name="Perpleching">Perpleching</string>
    <string name="Purplexing">Purplexing</string>
    <string name="Perplexing">Perplexing</string>
    <string name="Purplexxing">Purplexxing</string>
    <string name="No9">Question 9 of 10</string>
    <string name="Question9">Which is the correctly spelled word?</string>
    <string name="Pohnograph">Pohnograph</string>
    <string name="Phonograph">Phonograph</string>
    <string name="Phonogrpah">Phonogrpah</string>
    <string name="Phongraph">Phongraph</string>
    <string name="No10">Question 10 of 10</string>
    <string name="Question10">How do you spell another word for "to whip"?</string>
    <string name="Flaggallete">Flaggallete</string>
    <string name="Flagellate">Flagellate</string>
    <string name="Flagallete">Flagallete</string>
    <string name="Flagelate">Flagelate</string>
    <string name="Grade">Grade Quiz</string>
    <string name="TryAgain">Try Again</string>


</resources>
